<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/layout_idea_block"
                android:id="@+id/textView2"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sIdeaTypes"
                android:layout_marginBottom="15dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cvIdea">

                <AutoCompleteTextView
                    android:id="@+id/etIdea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout_idea_description"
                    android:maxLines="4"
                    android:singleLine="true"
                    android:inputType="text|textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cvRes">

                <AutoCompleteTextView
                    android:id="@+id/etRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout_idea_need"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:inputType="text|textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cvGoal">

                <AutoCompleteTextView
                    android:id="@+id/etGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout_idea_goals"
                    android:maxLines="4"
                    android:singleLine="true"
                    android:inputType="text|textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cvRealizeTime">

                <AutoCompleteTextView
                    android:id="@+id/etRealizeTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout_idea_rz_time"
                    android:maxLines="4"
                    android:singleLine="true"
                    android:inputType="text|textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layout_idea_send"
                android:id="@+id/btnSendIdea"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_style"
                android:padding="3dp"
                android:textColor="#ffffff"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>